# SpecForge

./: .gitignore  README.md  pyproject.toml  requirements-rocm.txt
.github/workflows/: test.yaml
benchmarks/benchmarker/: __init__.py  mbpp.py
configs/: gemma3-1b-eagle3.json  lfm2.5-1.2b-instruct-dflash.json  qwen3-4b-dflash.json  qwen3-8b-domino.json  qwen3-8b-peagle.json  qwen3.5-4b-dflash.json  qwen3.5-4b-domino.json
docs/basic_usage/: data_preparation.md
examples/: run_lfm2.5_1.2b_instruct_dflash_online.sh  run_qwen3.5_4b_dflash_online_npu.sh  run_qwen3.5_4b_domino_online_npu.sh  run_qwen3_4b_dflash_online.sh  run_qwen3_8b_dflash_online.sh  run_qwen3_8b_domino_online.sh  run_qwen3_8b_dpace_online.sh  run_qwen3_8b_eagle3_online.sh  run_qwen3_8b_eagle3_online_2.sh  run_qwen3_8b_peagle_online.sh
qwen3_8b_dflash/: default_config.py  run_qwen3_8b_dflash_online_2.sh  run_simple_train_dflash.sh  simple_train_dflash.py  train_dflash.py
scripts/: prepare_data.py  prepare_hidden_states.py  regenerate_train_data.py  train_dflash.py  train_domino.py  train_eagle3.py  train_eagle3_dataflow.py  train_peagle.py
specforge/: args.py  distributed.py  lr_scheduler.py  optimizer.py  utils.py
specforge/core/: __init__.py  compact_teacher.py  dflash.py  domino.py  eagle3.py  eagle3_adapters.py  lk_loss.py  loss.py  peagle.py
specforge/data/: parse.py  preprocessing.py  template.py
specforge/modeling/: __init__.py  auto.py
specforge/runtime/: ARCHITECTURE.md  CONTRACTS.md  README.md  __init__.py  contracts.py  launch.py
tests/test_data/: test_parser_normalization.py  (+2 more)
(+56 files in other folders)
